--- a/react-flask-app/package.json
+++ b/react-flask-app/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "chart.js": "^2.9.3",
     "click": "^0.1.0",
     "dotenv": "^8.2.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
     "sqlite3": "^5.0.0"
